--- a/index.html
+++ b/index.html
@@ -28,14 +28,22 @@
         .bar-values { position: relative; z-index: 2; width: 100%; display: flex; justify-content: center; align-items: center; gap: 2px; pointer-events: none; }
         .bar-values input { pointer-events: auto; width: 40px; background: transparent; border: none; text-align: center; font-size: 14px; font-weight: bold; color: white; text-shadow: 2px 2px 2px #000; }
         
-        /* Atributos e Perícias */
-        .attr-container { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 8px; }
-        .attr-box { background: var(--input-bg); border: 1px solid #7a2a2f; border-radius: 15px; padding: 10px; text-align: center; }
+        /* Atributos Estilo Print */
+        .attr-container { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 10px; margin-top: 10px; }
+        .attr-box { background: var(--input-bg); border: 1px solid #7a2a2f; border-radius: 12px; padding: 15px 5px; text-align: center; display: flex; flex-direction: column; align-items: center; }
+        .attr-box input { font-size: 32px; font-weight: bold; text-align: center; border: none; background: transparent; width: 100%; padding: 0; margin-bottom: 5px; }
+        .attr-box div { font-size: 11px; font-weight: bold; color: #ffffff; text-transform: uppercase; letter-spacing: 1px; }
+
+        /* Perícias */
         .pericia-row { display: flex; justify-content: space-between; align-items: center; background: rgba(0,0,0,0.2); margin-bottom: 4px; padding: 5px 10px; border-radius: 8px; border: 1px solid #5a1a1f; }
         .pericia-row input { width: 45px; text-align: center; }
+        
         .death-saves { text-align: center; font-size: 30px; cursor: pointer; margin-top: 10px; }
         .skull { opacity: 0.2; transition: 0.3s; }
         .skull.active { opacity: 1; filter: drop-shadow(0 0 5px red); }
+
+        /* Remove setinhas do input de número */
+        input::-webkit-outer-spin-button, input::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }
     </style>
 </head>
 <body>
@@ -98,8 +106,8 @@
             <div class="header-label">Atributos</div>
             <div class="attr-container">
                 <div class="attr-box"><input type="number" id="poder" value="0"><div>PODER</div></div>
-                <div class="attr-box"><input type="number" id="habilidade" value="0"><div>HAB.</div></div>
-                <div class="attr-box"><input type="number" id="resistencia" value="0"><div>RES.</div></div>
+                <div class="attr-box"><input type="number" id="habilidade" value="0"><div>HABILIDADE</div></div>
+                <div class="attr-box"><input type="number" id="resistencia" value="0"><div>RESISTÊNCIA</div></div>
             </div>
         </div>
     </div>
@@ -110,14 +118,9 @@
             <div class="pericia-row"><span>ANIMAIS</span><input type="number" id="p_animais" value="0"></div>
             <div class="pericia-row"><span>ARTE</span><input type="number" id="p_arte" value="0"></div>
             <div class="pericia-row"><span>ESPORTE</span><input type="number" id="p_esporte" value="0"></div>
-            <div class="pericia-row"><span>INFLUÊNCIA</span><input type="number" id="p_influencia" value="0"></div>
             <div class="pericia-row"><span>LUTA</span><input type="number" id="p_luta" value="0"></div>
-            <div class="pericia-row"><span>MANHA</span><input type="number" id="p_manha" value="0"></div>
-            <div class="pericia-row"><span>MÁQUINAS</span><input type="number" id="p_maquinas" value="0"></div>
-            <div class="pericia-row"><span>MEDICINA</span><input type="number" id="p_medicina" value="0"></div>
             <div class="pericia-row"><span>MÍSTICA</span><input type="number" id="p_mistica" value="0"></div>
             <div class="pericia-row"><span>PERCEPÇÃO</span><input type="number" id="p_percepcao" value="0"></div>
-            <div class="pericia-row"><span>SABER</span><input type="number" id="p_saber" value="0"></div>
             <div class="pericia-row"><span>SOBREVIVÊNCIA</span><input type="number" id="p_sobrevivencia" value="0"></div>
         </div>
     </div>
@@ -156,7 +159,8 @@
         const at = parseInt(document.getElementById(type + '_at').value) || 0;
         const max = parseInt(document.getElementById(type + '_max').value) || 1;
         const percent = Math.min(Math.max((at / max) * 100, 0), 100);
-        document.getElementById('bar_' + type).style.width = percent + '%';
+        const barEl = document.getElementById('bar_' + type);
+        if (barEl) barEl.style.width = percent + '%';
     }
 
     document.addEventListener('change', (e) => {
