--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <hr style="border:0; border-top:1px solid #5a1a1f; margin: 20px 0;">
             <div class="header-label">Inventário</div>
             <div class="weight-display">
-                PESO: <span id="weight_val" class="weight-val">0</span> / <span id="weight_max">0</span> kg
+                PESO: <span id="weight_val" class="weight-val">0</span> / <span id="weight_max">0</span>
             </div>
             <label>Itens <button class="btn-add" onclick="addItem('inventario')">+</button></label>
             <div id="list_inventario" style="margin-top:5px;"></div>
@@ -621,3 +621,4 @@
 
 </body>
 </html>
+
